# 2g1c

./: .gitignore  2g1c.tex  CMakeLists.txt  README.md  genhook.py
src/bootstrap/: main.c
src/haskell-hook/: foreign_c_add.c  haskell.c  haskell.h  hook.c  hook.h  hooks.h  main.c  my_plus.asm  stgreg.asm  unsafe_zp.hs  zp.asm  zp.c
src/injector/: injector.c  injector.h  mach_inject.c  main.c
stack-calc/: .gitignore  README.md  package.yaml
stack-calc/lib/: Interpreter.hs  Math.hs  Parser.hs  Stack.hs  Token.hs
stack-calc/src/: Main.hs
